syntax = "proto3";

package ispmonitor.license.v1;

option go_package = "github.com/MohamadKhaledAbbas/ISPVisualMonitor-Agent/api/proto/licensepb";

import "google/protobuf/timestamp.proto";

service LicenseService {
  rpc ValidateLicense(ValidateRequest) returns (ValidateResponse);
  rpc RefreshLicense(RefreshRequest) returns (RefreshResponse);
}

message ValidateRequest {
  string license_key = 1;
  string agent_id = 2;
  string hardware_fingerprint = 3;
}

message ValidateResponse {
  bool valid = 1;
  string tier = 2;
  google.protobuf.Timestamp expires_at = 3;
  int32 max_routers = 4;
  repeated string enabled_features = 5;
  string message = 6;
}

message RefreshRequest {
  string license_key = 1;
  string agent_id = 2;
}

message RefreshResponse {
  bool success = 1;
  google.protobuf.Timestamp next_refresh = 2;
}
